# SerialCommunication

linux_ver/include/: SerialPort.h
linux_ver/src/: CMakeLists.txt  SerialPort.cpp  main.cpp
window_ver/: CMakeLists.txt
window_ver/include/: serialcomm.h
window_ver/src/: CMakeLists.txt  SerialComm.cpp  SerialPort.cpp  main.cpp
